Started JShell EnvCommand.